# ibisos

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  compile.py
.history/: .gitignore_20201228012730  .gitignore_20201230050203  .gitignore_20210104193922  .gitignore_20210104193928  CMakeLists_20201229002236.txt  CMakeLists_20201229002332.txt  CMakeLists_20201229002447.txt  CMakeLists_20201229002558.txt  build_20201230045745.sh  build_20201231170620.sh  build_20201231170718.sh  build_20201231170747.sh  build_20201231170757.sh  build_20201231170944.sh  build_20201231171047.sh  build_20201231171144.sh  build_20201231171211.sh  build_20201231171225.sh  build_20201231171253.sh  malloc_20201231024912.h  malloc_20201231024915.h  malloc_20201231024952.cpp  malloc_20201231025008.cpp  malloc_20201231025017.cpp  malloc_20201231025103.cpp  malloc_20201231025107.cpp  malloc_20201231025232.cpp  malloc_20201231025807.cpp  malloc_20201231025821.cpp  test_20201231025422.cpp  test_20201231025509.cpp  test_20201231025609.cpp  test_20201231025629.cpp  test_20201231025729.cpp  test_20201231030210.cpp  test_20201231030247.cpp  test_20201231030251.cpp  test_20201231030350.cpp  test_20201231030404.cpp  test_20201231030441.cpp  (+10 more)
.history/src/: CMakeLists_20201231024209.txt  CMakeLists_20201231170457.txt  CMakeLists_20201231170558.txt  CMakeLists_20201231170824.txt
src/: CMakeLists.txt
src/boot/: boot.asm  linker.ld
src/devices/: pci.cpp
src/graphics/: graphics.cpp
src/include/: stdint.h
src/malloc/: malloc.c  malloc.cpp
(+359 files in other folders)
